--- a/example/docs/guide/getStarted.mdx
+++ b/example/docs/guide/getStarted.mdx
@@ -2,17 +2,32 @@
 
 ## 引入
 
-```bash
-npm install xph-crud --save
-```
+import Tabs from "@theme/Tabs";
+import TabItem from "@theme/TabItem";
 
-```bash
-yarn add xph-crud
-```
+<Tabs>
+  <TabItem value="npm" label="npm" default>
 
-```bash
-pnpm install xph-crud --save
-```
+    ```bash
+    npm install xph-crud --save
+    ```
+
+  </TabItem>
+  <TabItem value="yarn" label="yarn">
+    
+    ```bash
+    yarn add xph-crud
+    ```
+
+  </TabItem>
+  <TabItem value="pnpm" label="pnpm">
+    
+     ```bash
+    pnpm install xph-crud --save
+    ```
+    
+  </TabItem>
+</Tabs>
 
 ## 用法
 
