--- a/docs/docs/comp/actions.mdx
+++ b/docs/docs/comp/actions.mdx
@@ -1,5 +1,7 @@
 # XphActions 可配置操作组
 
+import ActionsExample from "/examples/common/actionsApp";
+
 ## 基本使用
 
 ```tsx
@@ -57,3 +59,5 @@ const ReactApp: React.FC = () => {
 
 export default ReactApp;
 ```
+
+<ActionsExample />
