--- a/docs/docs/comp/form.mdx
+++ b/docs/docs/comp/form.mdx
@@ -1,5 +1,7 @@
 # XphForm 可配置表单
 
+import FormExample from "/examples/form/formApp";
+
 ## 基本使用
 
 ```tsx
@@ -719,3 +721,5 @@ const ReactApp: React.FC = () => {
 
 export default ReactApp;
 ```
+
+<FormExample />
