--- a/docs/docs/comp/table.mdx
+++ b/docs/docs/comp/table.mdx
@@ -1,5 +1,7 @@
 # XphTable 可配置列表
 
+import TableExample from "/examples/table/tableApp";
+
 ## 基本使用
 
 ```tsx
@@ -455,3 +457,5 @@ const ReactApp: React.FC = () => {
 
 export default ReactApp;
 ```
+
+<TableExample />
