--- a/docs/docs/comp/table.mdx
+++ b/docs/docs/comp/table.mdx
@@ -1,3 +1,7 @@
+import { Table } from "examples";
+import ExampleWrapper from "@site/src/components/ExampleWrapper";
+import pre from "@site/src/theme/MDXComponents/Pre";
+
 # XphTable 可配置列表
 
 ## 基本使用
@@ -459,6 +463,10 @@ export default ReactApp;
 ```
 
 ## Typescript 案例
+
+<pre>
+  <ExampleWrapper Comp={Table}></ExampleWrapper>
+</pre>
 
 ## 在 CodeSandbox 尝试
 
