--- a/docs/docs/comp/table.mdx
+++ b/docs/docs/comp/table.mdx
@@ -465,7 +465,9 @@ export default ReactApp;
 ## Typescript 案例
 
 <pre>
-  <ExampleWrapper Comp={Table}></ExampleWrapper>
+  <ExampleWrapper>
+    <Table />
+  </ExampleWrapper>
 </pre>
 
 ## 在 CodeSandbox 尝试
