--- a/docs/docs/comp/form.mdx
+++ b/docs/docs/comp/form.mdx
@@ -1,3 +1,7 @@
+import { Form } from "examples";
+import ExampleWrapper from "@site/src/components/ExampleWrapper";
+import pre from "@site/src/theme/MDXComponents/Pre";
+
 # XphForm 可配置表单
 
 ## 基本使用
@@ -721,6 +725,12 @@ export default ReactApp;
 ```
 
 ## Typescript 案例
+
+<pre>
+  <ExampleWrapper>
+    <Form />
+  </ExampleWrapper>
+</pre>
 
 ## 在 CodeSandbox 尝试
 
