--- a/docs/docs/comp/actions.mdx
+++ b/docs/docs/comp/actions.mdx
@@ -1,3 +1,7 @@
+import { Actions } from "examples";
+import DemoWrapper from "@site/src/components/DemoWrapper";
+import pre from "@site/src/theme/MDXComponents/Pre";
+
 # XphActions 可配置操作组
 
 ## 基本使用
@@ -59,6 +63,12 @@ export default ReactApp;
 ```
 
 ## Typescript 案例
+
+<pre>
+  <DemoWrapper>
+    <Actions />
+  </DemoWrapper>
+</pre>
 
 ## 在 CodeSandbox 尝试
 
