--- a/docs/docs/comp/form.mdx
+++ b/docs/docs/comp/form.mdx
@@ -1,5 +1,5 @@
 import { Form } from "examples";
-import ExampleWrapper from "@site/src/components/ExampleWrapper";
+import DemoWrapper from "@site/src/components/DemoWrapper";
 import pre from "@site/src/theme/MDXComponents/Pre";
 
 # XphForm 可配置表单
@@ -727,9 +727,9 @@ export default ReactApp;
 ## Typescript 案例
 
 <pre>
-  <ExampleWrapper>
+  <DemoWrapper>
     <Form />
-  </ExampleWrapper>
+  </DemoWrapper>
 </pre>
 
 ## 在 CodeSandbox 尝试
