--- a/docs/docs/comp/table.mdx
+++ b/docs/docs/comp/table.mdx
@@ -1,5 +1,5 @@
 import { Table } from "examples";
-import ExampleWrapper from "@site/src/components/ExampleWrapper";
+import DemoWrapper from "@site/src/components/DemoWrapper";
 import pre from "@site/src/theme/MDXComponents/Pre";
 
 # XphTable 可配置列表
@@ -465,9 +465,9 @@ export default ReactApp;
 ## Typescript 案例
 
 <pre>
-  <ExampleWrapper>
+  <DemoWrapper>
     <Table />
-  </ExampleWrapper>
+  </DemoWrapper>
 </pre>
 
 ## 在 CodeSandbox 尝试
