fix: 新增可配置表格扩展文档

--- a/docs/docs/comp/extends.mdx
+++ b/docs/docs/comp/extends.mdx
@@ -1,8 +1,9 @@
-import { ExtendsFormBase, ExtendsFormItem } from "examples";
+import { ExtendsFormBase, ExtendsFormItem, ExtendsTableBase } from "examples";
 import DemoWrapper from "@site/src/components/DemoWrapper";
+import CodeBlock from "@site/src/theme/CodeBlock";
 import { default as extendsFormBaseRaw } from "!raw-loader!examples/demo/extends/extendsFormBase.tsx";
 import { default as extendsFormItemRaw } from "!raw-loader!examples/demo/extends/extendsFormItem.tsx";
-import CodeBlock from "@site/src/theme/CodeBlock";
+import { default as extendsTableBasaeRaw } from "!raw-loader!examples/demo/extends/extendsTableBase.tsx";
 
 # 扩展自定义组件
 
@@ -36,7 +37,17 @@ import CodeBlock from "@site/src/theme/CodeBlock";
 
 ## 扩展 XphTable 单元格映射内容
 
-待书写。。。
+### 扩展单元格映射内容
+
+同理，`XphTable`中的映射内容也是可以自定义的，也是通过给`XphExtendCompPropsProvider`添加单元格映射对象即可的方式。
+
+<CodeBlock language={"tsx"}>{extendsTableBasaeRaw}</CodeBlock>
+
+<pre>
+  <DemoWrapper>
+    <ExtendsTableBase />
+  </DemoWrapper>
+</pre>
 
 ## 扩展 XphActions 操作组映射内容
 
