fix: 调整例子弹窗位置

--- a/docs/docs/comp/table/base.mdx
+++ b/docs/docs/comp/table/base.mdx
@@ -11,11 +11,13 @@ import CodeBlock from "@site/src/theme/CodeBlock";
 
 ## Typescript 案例
 
-<pre>
-  <DemoWrapper>
-    <Table />
-  </DemoWrapper>
-</pre>
+<div id="docs-comp-table-base" style={{ position: "relative" }}>
+  <pre>
+    <DemoWrapper>
+      <Table />
+    </DemoWrapper>
+  </pre>
+</div>
 
 ## 在 CodeSandbox 尝试
 
