--- a/docs/docs/comp/dialog/base.mdx
+++ b/docs/docs/comp/dialog/base.mdx
@@ -1,9 +1,9 @@
-import { Table } from "examples";
+import { Dialog } from "examples";
 import DemoWrapper from "@site/src/components/DemoWrapper";
-import { default as rawExamples } from "!raw-loader!examples/demo/table/table.tsx";
+import { default as rawExamples } from "!raw-loader!examples/demo/dialog/dialog.tsx";
 import CodeBlock from "@site/src/theme/CodeBlock";
 
-# XphTable 可配置列表
+# XphDialog 层叠弹窗
 
 ## 基本使用
 
@@ -11,10 +11,10 @@ import CodeBlock from "@site/src/theme/CodeBlock";
 
 ## Typescript 案例
 
-<div id="docs-comp-table-base" style={{ position: "relative" }}>
+<div id="docs-comp-dialog-base" style={{ position: "relative" }}>
   <pre>
     <DemoWrapper>
-      <Table />
+      <Dialog />
     </DemoWrapper>
   </pre>
 </div>
