--- a/docs/docs/comp/form/base.mdx
+++ b/docs/docs/comp/form/base.mdx
@@ -19,4 +19,4 @@ import CodeBlock from "@site/src/theme/CodeBlock";
 
 ## 在 CodeSandbox 尝试
 
-[![Edit XiaoPiHong/xph-crud/codesandbox](https://codesandbox.io/static/img/play-codesandbox.svg)](https://codesandbox.io/p/github/XiaoPiHong/xph-crud/codesandbox?embed=1&file=%2Fexamples%2Fdemo%2Fform%2Fform.tsx)
+[![Edit XiaoPiHong/xph-crud/codesandbox](https://codesandbox.io/static/img/play-codesandbox.svg)](https://codesandbox.io/p/github/XiaoPiHong/xph-crud/codesandbox)
