--- a/docs/docs/comp/extends/base.mdx
+++ b/docs/docs/comp/extends/base.mdx
@@ -101,9 +101,9 @@ interface IMyTagProps {
 }
 
 /**
- * @params Comp 上一次处理后的组件
- * @params curCellFuncProps 当前项相关属性
- * @params mainProps 透传给最底层组件的属性
+ * @params Comp - 上一次处理后的组件
+ * @params curCellFuncProps - 当前项相关属性
+ * @params mainProps - 透传给最底层组件的属性
  */
 const MyTag = (
   Comp: React.JSXElementConstructor<any>,
