--- a/docs/docs/comp/actions/base.mdx
+++ b/docs/docs/comp/actions/base.mdx
@@ -2,6 +2,7 @@ import { Actions } from "examples";
 import DemoWrapper from "@site/src/components/DemoWrapper";
 import { default as rawExamples } from "!raw-loader!examples/demo/actions/actions.tsx";
 import CodeBlock from "@site/src/theme/CodeBlock";
+import IXphActionsPropsApi from "@site/docs/api/interfaces/IXphActionsProps.md";
 
 # XphActions 可配置操作组
 
@@ -16,6 +17,8 @@ import CodeBlock from "@site/src/theme/CodeBlock";
     <Actions />
   </DemoWrapper>
 </pre>
+
+<IXphActionsPropsApi />
 
 ## 在 CodeSandbox 尝试
 
