--- a/docs/docs/comp/auth/base.mdx
+++ b/docs/docs/comp/auth/base.mdx
@@ -2,6 +2,7 @@ import { Auth } from "examples";
 import DemoWrapper from "@site/src/components/DemoWrapper";
 import { default as rawExamples } from "!raw-loader!examples/demo/auth/auth.tsx";
 import CodeBlock from "@site/src/theme/CodeBlock";
+import IXphAuthPropsApi from "@site/docs/api/interfaces/IXphAuthProps.md";
 
 # XphAuth 鉴权组件
 
@@ -16,6 +17,8 @@ import CodeBlock from "@site/src/theme/CodeBlock";
     <Auth />
   </DemoWrapper>
 </pre>
+
+<IXphAuthPropsApi />
 
 ## 在 CodeSandbox 尝试
 
