--- a/docs/docs/comp/dialog/base.mdx
+++ b/docs/docs/comp/dialog/base.mdx
@@ -2,6 +2,7 @@ import { Dialog } from "examples";
 import DemoWrapper from "@site/src/components/DemoWrapper";
 import { default as rawExamples } from "!raw-loader!examples/demo/dialog/dialog.tsx";
 import CodeBlock from "@site/src/theme/CodeBlock";
+import IXphDialogPropsApi from "@site/docs/api/interfaces/IXphDialogProps.md";
 
 # XphDialog 层叠弹窗
 
@@ -16,6 +17,8 @@ import CodeBlock from "@site/src/theme/CodeBlock";
     <Dialog />
   </DemoWrapper>
 </pre>
+
+<IXphDialogPropsApi />
 
 ## 在 CodeSandbox 尝试
 
