--- a/docs/docs/comp/form/base.mdx
+++ b/docs/docs/comp/form/base.mdx
@@ -2,6 +2,7 @@ import { Form } from "examples";
 import DemoWrapper from "@site/src/components/DemoWrapper";
 import { default as rawExamples } from "!raw-loader!examples/demo/form/form.tsx";
 import CodeBlock from "@site/src/theme/CodeBlock";
+import IXphFormPropsApi from "@site/docs/api/interfaces/IXphFormProps.md";
 
 # XphForm 可配置表单
 
@@ -16,6 +17,8 @@ import CodeBlock from "@site/src/theme/CodeBlock";
     <Form />
   </DemoWrapper>
 </pre>
+
+<IXphFormPropsApi />
 
 ## 在 CodeSandbox 尝试
 
