--- a/docs/docs/comp/table/base.mdx
+++ b/docs/docs/comp/table/base.mdx
@@ -2,6 +2,7 @@ import { Table } from "examples";
 import DemoWrapper from "@site/src/components/DemoWrapper";
 import { default as rawExamples } from "!raw-loader!examples/demo/table/table.tsx";
 import CodeBlock from "@site/src/theme/CodeBlock";
+import TXphTablePropsApi from "@site/docs/api/type-aliases/TXphTableProps.md";
 
 # XphTable 可配置列表
 
@@ -18,6 +19,8 @@ import CodeBlock from "@site/src/theme/CodeBlock";
     </DemoWrapper>
   </pre>
 </div>
+
+<TXphTablePropsApi />
 
 ## 在 CodeSandbox 尝试
 
