--- a/docs/docs/comp/dialog/base.mdx
+++ b/docs/docs/comp/dialog/base.mdx
@@ -1,22 +1,15 @@
 import { Dialog } from "examples";
-import DemoWrapper from "@site/src/components/DemoWrapper";
-import { default as rawExamples } from "!raw-loader!examples/demo/dialog/dialog.tsx";
-import CodeBlock from "@site/src/theme/CodeBlock";
+import { default as dialogRaw } from "!raw-loader!examples/demo/dialog/dialog.tsx";
 import IXphDialogPropsApi from "@site/docs/api/interfaces/IXphDialogProps.md";
+import ExpandDemoWrapper from "@site/src/components/ExpandDemoWrapper";
 
 # XphDialog 层叠弹窗
 
 ## 基本使用
 
-<CodeBlock language={"tsx"}>{rawExamples}</CodeBlock>
-
-## Typescript 案例
-
-<pre>
-  <DemoWrapper height={"400px"}>
-    <Dialog />
-  </DemoWrapper>
-</pre>
+<ExpandDemoWrapper rawStr={dialogRaw} height={"400px"}>
+  <Dialog />
+</ExpandDemoWrapper>
 
 <IXphDialogPropsApi />
 
