--- a/docs/docs/comp/form/base.mdx
+++ b/docs/docs/comp/form/base.mdx
@@ -2,6 +2,7 @@ import { FormDemos } from "examples";
 import { default as formRaw } from "!raw-loader!examples/demo/form/base.tsx";
 import IXphFormPropsApi from "@site/docs/api/interfaces/IXphFormProps.md";
 import ExpandDemoWrapper from "@site/src/components/ExpandDemoWrapper";
+import Collapsible from "@site/docs/comp/form/properties/collapsible.mdx";
 
 # XphForm 可配置表单
 
@@ -10,6 +11,16 @@ import ExpandDemoWrapper from "@site/src/components/ExpandDemoWrapper";
 <ExpandDemoWrapper rawStr={formRaw}>
   <FormDemos.Base />
 </ExpandDemoWrapper>
+
+## 案例
+
+<Collapsible />
+
+### 表单组件映射
+
+[组件映射](/docs/comp/form/properties/items)
+
+### 文档待完善...
 
 <IXphFormPropsApi />
 
