fix: 区分文件名称大小写

--- a/docs/docs/comp/form/properties/items/index.mdx
+++ b/docs/docs/comp/form/properties/items/index.mdx
@@ -1,5 +1,5 @@
-import Input from "./Input.mdx";
-import Select from "./Select.mdx";
+import Input from "./input.mdx";
+import Select from "./select.mdx";
 
 # 表单组件映射
 
