--- a/docs/docs/comp/form/properties/items/input.mdx
+++ b/docs/docs/comp/form/properties/items/input.mdx
@@ -1,9 +1,9 @@
 import { FormDemos } from "examples";
 import ExpandDemoWrapper from "@site/src/components/ExpandDemoWrapper";
-import { default as raw } from "!raw-loader!examples/demo/form/properties/items/Select.tsx";
+import { default as raw } from "!raw-loader!examples/demo/form/properties/items/input.tsx";
 
-### Select
+### Input
 
 <ExpandDemoWrapper rawStr={raw}>
-  <FormDemos.Properties.items.Select />
+  <FormDemos.Properties.items.Input />
 </ExpandDemoWrapper>
