--- a/docs/docs/comp/form/properties/items/select.mdx
+++ b/docs/docs/comp/form/properties/items/select.mdx
@@ -1,9 +1,9 @@
 import { FormDemos } from "examples";
 import ExpandDemoWrapper from "@site/src/components/ExpandDemoWrapper";
-import { default as raw } from "!raw-loader!examples/demo/form/properties/items/Input.tsx";
+import { default as raw } from "!raw-loader!examples/demo/form/properties/items/select.tsx";
 
-### Input
+### Select
 
 <ExpandDemoWrapper rawStr={raw}>
-  <FormDemos.Properties.items.Input />
+  <FormDemos.Properties.items.Select />
 </ExpandDemoWrapper>
