--- a/docs/docs/comp/form/base.mdx
+++ b/docs/docs/comp/form/base.mdx
@@ -1,8 +1,11 @@
 import { FormDemos } from "examples";
 import { default as formRaw } from "!raw-loader!examples/demo/form/base.tsx";
 import IXphFormPropsApi from "@site/docs/api/interfaces/IXphFormProps.md";
+import IXphFormActionTypeApi from "@site/docs/api/interfaces/IXphFormActionType.md";
 import ExpandDemoWrapper from "@site/src/components/ExpandDemoWrapper";
 import Collapsible from "@site/docs/comp/form/properties/collapsible.mdx";
+import Layout from "@site/docs/comp/form/properties/layout.mdx";
+import ColProps from "@site/docs/comp/form/properties/colProps.mdx";
 
 # XphForm 可配置表单
 
@@ -16,6 +19,10 @@ import Collapsible from "@site/docs/comp/form/properties/collapsible.mdx";
 
 <Collapsible />
 
+<Layout />
+
+<ColProps />
+
 ### 表单组件映射
 
 [组件映射](/docs/comp/form/properties/items)
@@ -23,6 +30,8 @@ import Collapsible from "@site/docs/comp/form/properties/collapsible.mdx";
 ### 文档待完善...
 
 <IXphFormPropsApi />
+
+<IXphFormActionTypeApi />
 
 ## 在 CodeSandbox 尝试
 
