--- a/docs/docs/comp/actions/base.mdx
+++ b/docs/docs/comp/actions/base.mdx
@@ -1,6 +1,5 @@
 import { ActionsDemos } from "examples";
 import { default as actionsRaw } from "!raw-loader!examples/demo/actions/base.tsx";
-import IXphActionsPropsApi from "@site/docs/api/interfaces/IXphActionsProps.md";
 import ExpandDemoWrapper from "@site/src/components/ExpandDemoWrapper";
 
 # XphActions 可配置操作组
@@ -11,7 +10,9 @@ import ExpandDemoWrapper from "@site/src/components/ExpandDemoWrapper";
   <ActionsDemos.Base />
 </ExpandDemoWrapper>
 
-<IXphActionsPropsApi />
+## API
+
+[Actions API](/docs/api/interfaces/IXphActionsProps)
 
 ## 在 CodeSandbox 尝试
 
