--- a/docs/docs/comp/auth/base.mdx
+++ b/docs/docs/comp/auth/base.mdx
@@ -1,6 +1,5 @@
 import { AuthDemos } from "examples";
 import { default as authRaw } from "!raw-loader!examples/demo/auth/base.tsx";
-import IXphAuthPropsApi from "@site/docs/api/interfaces/IXphAuthProps.md";
 import ExpandDemoWrapper from "@site/src/components/ExpandDemoWrapper";
 
 # XphAuth 鉴权组件
@@ -11,7 +10,9 @@ import ExpandDemoWrapper from "@site/src/components/ExpandDemoWrapper";
   <AuthDemos.Base />
 </ExpandDemoWrapper>
 
-<IXphAuthPropsApi />
+## API
+
+[Auth API](/docs/api/interfaces/IXphAuthProps)
 
 ## 在 CodeSandbox 尝试
 
