--- a/docs/docs/comp/dialog/base.mdx
+++ b/docs/docs/comp/dialog/base.mdx
@@ -1,6 +1,5 @@
 import { DialogDemos } from "examples";
 import { default as dialogRaw } from "!raw-loader!examples/demo/dialog/base.tsx";
-import IXphDialogPropsApi from "@site/docs/api/interfaces/IXphDialogProps.md";
 import ExpandDemoWrapper from "@site/src/components/ExpandDemoWrapper";
 
 # XphDialog 层叠弹窗
@@ -11,7 +10,11 @@ import ExpandDemoWrapper from "@site/src/components/ExpandDemoWrapper";
   <DialogDemos.Base />
 </ExpandDemoWrapper>
 
-<IXphDialogPropsApi />
+## API
+
+[Dialog API](/docs/api/interfaces/IXphDialogProps)
+
+[DialogInstance API](/docs/api/interfaces/IXphDialogActionType)
 
 ## 在 CodeSandbox 尝试
 
