--- a/docs/docs/comp/form/base.mdx
+++ b/docs/docs/comp/form/base.mdx
@@ -1,7 +1,5 @@
 import { FormDemos } from "examples";
 import { default as formRaw } from "!raw-loader!examples/demo/form/base.tsx";
-import IXphFormPropsApi from "@site/docs/api/interfaces/IXphFormProps.md";
-import IXphFormActionTypeApi from "@site/docs/api/interfaces/IXphFormActionType.md";
 import ExpandDemoWrapper from "@site/src/components/ExpandDemoWrapper";
 import Collapsible from "@site/docs/comp/form/properties/collapsible.mdx";
 import Layout from "@site/docs/comp/form/properties/layout.mdx";
@@ -29,9 +27,11 @@ import ColProps from "@site/docs/comp/form/properties/colProps.mdx";
 
 ### 文档待完善...
 
-<IXphFormPropsApi />
+## API
 
-<IXphFormActionTypeApi />
+[Form API](/docs/api/interfaces/IXphFormProps)
+
+[FormInstance API](/docs/api/interfaces/IXphFormActionType)
 
 ## 在 CodeSandbox 尝试
 
