--- a/docs/docs/comp/table/base.mdx
+++ b/docs/docs/comp/table/base.mdx
@@ -1,6 +1,5 @@
 import { TableDemos } from "examples";
 import { default as tableRaw } from "!raw-loader!examples/demo/table/base.tsx";
-import TXphTablePropsApi from "@site/docs/api/type-aliases/TXphTableProps.md";
 import ExpandDemoWrapper from "@site/src/components/ExpandDemoWrapper";
 
 # XphTable 可配置列表
@@ -11,7 +10,11 @@ import ExpandDemoWrapper from "@site/src/components/ExpandDemoWrapper";
   <TableDemos.Base />
 </ExpandDemoWrapper>
 
-<TXphTablePropsApi />
+## API
+
+[Table API](/docs/api/type-aliases/TXphTableProps)
+
+[TableInstance API](/docs/api/type-aliases/TXphTableActionType)
 
 ## 在 CodeSandbox 尝试
 
