fix: 修改文档案例

--- a/docs/docs/comp/form/properties/items/index.mdx
+++ b/docs/docs/comp/form/properties/items/index.mdx
@@ -26,7 +26,7 @@ import ApiTransfer from "./api-transfer.mdx";
 import ApiAutoComplete from "./api-auto-complete.mdx";
 import AutoUpload from "./auto-upload.mdx";
 
-# 表单组件映射
+# 表单项组件映射
 
 ## 组件
 
