--- a/docs/docs/comp/form/base.mdx
+++ b/docs/docs/comp/form/base.mdx
@@ -4,6 +4,8 @@ import ExpandDemoWrapper from "@site/src/components/ExpandDemoWrapper";
 import Collapsible from "@site/docs/comp/form/properties/collapsible.mdx";
 import Layout from "@site/docs/comp/form/properties/layout.mdx";
 import ColProps from "@site/docs/comp/form/properties/colProps.mdx";
+import Disabled from "@site/docs/comp/form/properties/disabled.mdx";
+import Render from "@site/docs/comp/form/properties/items/render.mdx";
 
 # XphForm 可配置表单
 
@@ -21,7 +23,11 @@ import ColProps from "@site/docs/comp/form/properties/colProps.mdx";
 
 <ColProps />
 
-### 表单组件映射
+<Disabled />
+
+<Render />
+
+### 表单项组件映射
 
 [组件映射](/docs/comp/form/properties/items)
 
