--- a/docs/docs/comp/form/properties/items/properties/component/index.mdx
+++ b/docs/docs/comp/form/properties/items/properties/component/index.mdx
@@ -1,8 +1,8 @@
 import Input from "./input.mdx";
 import Select from "./select.mdx";
 import InputNumber from "./input-number.mdx";
-import TreeSelect from "./properties/component/tree-select.mdx";
-import Transfer from "./properties/component/transfer.mdx";
+import TreeSelect from "./tree-select.mdx";
+import Transfer from "./transfer.mdx";
 import Switch from "./switch.mdx";
 import Button from "./button.mdx";
 import Radio from "./radio.mdx";
@@ -14,12 +14,12 @@ import Cascader from "./cascader.mdx";
 import TimePicker from "./time-picker.mdx";
 import DatePicker from "./date-picker.mdx";
 import MonthPicker from "./month-picker.mdx";
-import WeekPicker from "./properties/component/week-picker.mdx";
+import WeekPicker from "./week-picker.mdx";
 import RangePicker from "./range-picker.mdx";
 import InputPassword from "./input-password.mdx";
 import InputTextArea from "./input-text-area.mdx";
 import AutoComplete from "./auto-complete.mdx";
-import Upload from "./properties/component/upload.mdx";
+import Upload from "./upload.mdx";
 import ApiSelect from "./api-select.mdx";
 import ApiTreeSelect from "./api-tree-select.mdx";
 import ApiTransfer from "./api-transfer.mdx";
