--- a/docs/docs/comp/form/base.mdx
+++ b/docs/docs/comp/form/base.mdx
@@ -6,6 +6,9 @@ import Layout from "@site/docs/comp/form/properties/layout.mdx";
 import ColProps from "@site/docs/comp/form/properties/colProps.mdx";
 import Disabled from "@site/docs/comp/form/properties/disabled.mdx";
 import Render from "@site/docs/comp/form/properties/items/properties/render.mdx";
+import Show from "@site/docs/comp/form/properties/items/properties/show.mdx";
+import IfShow from "@site/docs/comp/form/properties/items/properties/ifShow.mdx";
+import Rules from "@site/docs/comp/form/properties/items/properties/rules.mdx";
 
 # XphForm 可配置表单
 
@@ -26,6 +29,12 @@ import Render from "@site/docs/comp/form/properties/items/properties/render.mdx"
 <Disabled />
 
 <Render />
+
+<Show />
+
+<IfShow />
+
+<Rules />
 
 ### 表单项组件映射
 
