--- a/docs/docs/comp/form/base.mdx
+++ b/docs/docs/comp/form/base.mdx
@@ -5,10 +5,12 @@ import Collapsible from "@site/docs/comp/form/properties/collapsible.mdx";
 import Layout from "@site/docs/comp/form/properties/layout.mdx";
 import ColProps from "@site/docs/comp/form/properties/colProps.mdx";
 import Disabled from "@site/docs/comp/form/properties/disabled.mdx";
-import Render from "@site/docs/comp/form/properties/items/properties/render.mdx";
-import Show from "@site/docs/comp/form/properties/items/properties/show.mdx";
-import IfShow from "@site/docs/comp/form/properties/items/properties/ifShow.mdx";
-import Rules from "@site/docs/comp/form/properties/items/properties/rules.mdx";
+import ItemsRender from "@site/docs/comp/form/properties/items/properties/render.mdx";
+import ItemsShow from "@site/docs/comp/form/properties/items/properties/show.mdx";
+import ItemsIfShow from "@site/docs/comp/form/properties/items/properties/ifShow.mdx";
+import ItemsRules from "@site/docs/comp/form/properties/items/properties/rules.mdx";
+import ItemsForceRow from "@site/docs/comp/form/properties/items/properties/forceRow.mdx";
+import ItemsDisabled from "@site/docs/comp/form/properties/items/properties/disabled.mdx";
 
 # XphForm 可配置表单
 
@@ -28,13 +30,17 @@ import Rules from "@site/docs/comp/form/properties/items/properties/rules.mdx";
 
 <Disabled />
 
-<Render />
+<ItemsDisabled />
 
-<Show />
+<ItemsRender />
 
-<IfShow />
+<ItemsShow />
 
-<Rules />
+<ItemsIfShow />
+
+<ItemsRules />
+
+<ItemsForceRow />
 
 ### 表单项组件映射
 
