--- a/docs/docs/comp/form/base.mdx
+++ b/docs/docs/comp/form/base.mdx
@@ -11,6 +11,8 @@ import ItemsIfShow from "@site/docs/comp/form/properties/items/properties/ifShow
 import ItemsRules from "@site/docs/comp/form/properties/items/properties/rules.mdx";
 import ItemsForceRow from "@site/docs/comp/form/properties/items/properties/forceRow.mdx";
 import ItemsDisabled from "@site/docs/comp/form/properties/items/properties/disabled.mdx";
+import ItemsComponentProps from "@site/docs/comp/form/properties/items/properties/componentProps.mdx";
+import ItemsInitialValue from "@site/docs/comp/form/properties/items/properties/initialValue.mdx";
 
 # XphForm 可配置表单
 
@@ -32,7 +34,7 @@ import ItemsDisabled from "@site/docs/comp/form/properties/items/properties/disa
 
 <ItemsDisabled />
 
-<ItemsRender />
+<ItemsInitialValue />
 
 <ItemsShow />
 
@@ -42,11 +44,13 @@ import ItemsDisabled from "@site/docs/comp/form/properties/items/properties/disa
 
 <ItemsForceRow />
 
+<ItemsRender />
+
+<ItemsComponentProps />
+
 ### 表单项组件映射
 
 [组件映射](/docs/comp/form/properties/items/properties/component)
-
-### 文档待完善...
 
 ## API
 
