--- a/docs/docs/comp/form/base.mdx
+++ b/docs/docs/comp/form/base.mdx
@@ -4,7 +4,11 @@ import ExpandDemoWrapper from "@site/src/components/ExpandDemoWrapper";
 import Collapsible from "@site/docs/comp/form/properties/collapsible.mdx";
 import Layout from "@site/docs/comp/form/properties/layout.mdx";
 import ColProps from "@site/docs/comp/form/properties/colProps.mdx";
+import Size from "@site/docs/comp/form/properties/size.mdx";
 import Disabled from "@site/docs/comp/form/properties/disabled.mdx";
+import Register from "@site/docs/comp/form/properties/register.mdx";
+import RenderActions from "@site/docs/comp/form/properties/renderActions.mdx";
+import Ref from "@site/docs/comp/form/properties/ref.mdx";
 import ItemsRender from "@site/docs/comp/form/properties/items/properties/render.mdx";
 import ItemsShow from "@site/docs/comp/form/properties/items/properties/show.mdx";
 import ItemsIfShow from "@site/docs/comp/form/properties/items/properties/ifShow.mdx";
@@ -30,7 +34,11 @@ import ItemsInitialValue from "@site/docs/comp/form/properties/items/properties/
 
 <ColProps />
 
+<Size />
+
 <Disabled />
+
+<RenderActions />
 
 <ItemsDisabled />
 
@@ -51,6 +59,10 @@ import ItemsInitialValue from "@site/docs/comp/form/properties/items/properties/
 ### 表单项组件映射
 
 [组件映射](/docs/comp/form/properties/items/properties/component)
+
+<Register />
+
+<Ref />
 
 ## API
 
